[gd_scene load_steps=4 format=3 uid="uid://buspc3xb5jkoq"]

[ext_resource type="Script" path="res://scenes/mingames/fill_formulas/fill_formulas.gd" id="1_d3uug"]
[ext_resource type="Texture2D" uid="uid://dh8gao0ctsou1" path="res://scenes/mingames/fill_formulas/assets/guiElements/minigameGui.png" id="1_s1dx8"]
[ext_resource type="Texture2D" uid="uid://d2w7tbj37kix7" path="res://scenes/mingames/fill_formulas/assets/guiElements/congratulaciones.png" id="3_oyuu4"]

[node name="fill_formulas" type="Node2D"]
script = ExtResource("1_d3uug")

[node name="MinigameGui" type="Sprite2D" parent="."]
position = Vector2(562, 323)
texture = ExtResource("1_s1dx8")

[node name="Hint" type="RichTextLabel" parent="."]
offset_left = 720.0
offset_top = 351.0
offset_right = 889.0
offset_bottom = 448.0
bbcode_enabled = true

[node name="firstLetter" type="Marker2D" parent="."]
position = Vector2(291, 540)

[node name="startOfFormula" type="Marker2D" parent="."]
position = Vector2(308, 114)

[node name="finish" type="Sprite2D" parent="."]
visible = false
position = Vector2(575, 325)
texture = ExtResource("3_oyuu4")
